@@ -10,13 +10,14 @@ class TestMap < Test::Unit::TestCase
   include SchwerEngine
 
   RECT = Rectangle
+  TILE_SIZE = 40
 
   def setup
     @map = Map.new(Mock::TestingMapLoadStrategy.new)
   end
 
   def testRect
-    r = self.class::RECT.new(0, 0, Map::TILE_SIZE * 8, Map::TILE_SIZE * 8)
+    r = self.class::RECT.new(0, 0, TILE_SIZE * 8, TILE_SIZE * 8)
     assert(r.eql?(@map.rect), "The two rectangles (#{r.to_s} and #{@map.rect.to_s}) should contain the same numbers => eql? is expected to be true.")
   end
 
@@ -37,9 +38,20 @@ class TestMap < Test::Unit::TestCase
                  "Area is free, but it is on the topleft edge of solid tiles.")
   end
 
-  def testFreeOnTheEdgeOfFreeArea2
-    assert_equal(true, @map.area_free?(RECT.new(60,240,40,40)),
-                 "Area is free, but it is on the top edge of solid tiles.")
+  def testFreeOnTheEdgeOfFreeAreaBottomCollision
+    assert_equal(true, @map.area_free?(RECT.new(100,240,40,39)))
+  end
+
+  def testNonFreeOnTheEdgeOfFreeAreaBottomCollision
+    assert_equal(false, @map.area_free?(RECT.new(100,240,40,40)))
+  end
+
+  def testFreeOnTheEdgeOfFreeAreaRightCollision
+    assert_equal(true, @map.area_free?(RECT.new(200,60,39,40)))
+  end
+
+  def testNonFreeOnTheEdgeOfFreeAreaRightCollision
+    assert_equal(false, @map.area_free?(RECT.new(200,60,40,40)))
   end
 
 end # class TestMap
