@@ -1,3 +1,7 @@
+[18.October 2008]
+- tests: removed class TestMap2
+- TestMap: tests which helped me better understand Map#area_free?
+
 [6.October 2008]
 - xmlmap2loadstrategy.rb: implemented loading 'old XML maps'
   (most of freeVikings maps are in this format)
